[gd_scene load_steps=10 format=3 uid="uid://bunxm5kl0ytsw"]

[ext_resource type="Script" path="res://inside_levels_h/ammo_scene.gd" id="1_1oh2k"]
[ext_resource type="Texture2D" uid="uid://mrm5khxh4veg" path="res://assets/sprites/inside_layout_h_12.png" id="1_ticpp"]
[ext_resource type="PackedScene" uid="uid://y32enlyrm2c5" path="res://ammo.tscn" id="3_7vk46"]
[ext_resource type="PackedScene" uid="uid://5pmdmj5q2obg" path="res://enemy.tscn" id="4_wlado"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_66jai"]
size = Vector2(28, 276)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gogt8"]
size = Vector2(1020, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uidni"]
size = Vector2(1020, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_06pge"]
size = Vector2(28, 276)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rrioe"]
size = Vector2(252, 204)

[node name="inside_level_h_12" type="Node2D"]
script = ExtResource("1_1oh2k")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(576, 324)
texture = ExtResource("1_ticpp")

[node name="walls" type="StaticBody2D" parent="."]
visible = false
collision_layer = 4

[node name="CollisionShape2D2" type="CollisionShape2D" parent="walls"]
position = Vector2(80, 154)
shape = SubResource("RectangleShape2D_66jai")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="walls"]
position = Vector2(80, 494)
shape = SubResource("RectangleShape2D_66jai")

[node name="CollisionShape2D" type="CollisionShape2D" parent="walls"]
position = Vector2(576, 10)
shape = SubResource("RectangleShape2D_gogt8")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="walls"]
position = Vector2(576, 638)
shape = SubResource("RectangleShape2D_uidni")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="walls"]
position = Vector2(1072, 494)
shape = SubResource("RectangleShape2D_06pge")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="walls"]
position = Vector2(1072, 154)
shape = SubResource("RectangleShape2D_06pge")

[node name="CollisionShape2D7" type="CollisionShape2D" parent="walls"]
position = Vector2(220, 530)
shape = SubResource("RectangleShape2D_rrioe")

[node name="CollisionShape2D8" type="CollisionShape2D" parent="walls"]
position = Vector2(932, 530)
shape = SubResource("RectangleShape2D_rrioe")

[node name="CollisionShape2D9" type="CollisionShape2D" parent="walls"]
position = Vector2(576, 118)
shape = SubResource("RectangleShape2D_rrioe")

[node name="ammo" parent="." instance=ExtResource("3_7vk46")]
position = Vector2(576, 555)
scale = Vector2(0.5, 0.5)

[node name="enemy" parent="." instance=ExtResource("4_wlado")]
position = Vector2(818, 195)
scale = Vector2(0.7, 0.7)

[node name="enemy2" parent="." instance=ExtResource("4_wlado")]
position = Vector2(256, 119)
scale = Vector2(0.7, 0.7)

[node name="enemy3" parent="." instance=ExtResource("4_wlado")]
position = Vector2(462, 469)
scale = Vector2(0.7, 0.7)

[connection signal="body_entered" from="ammo" to="." method="_on_ammo_body_entered"]
[connection signal="hit" from="enemy" to="." method="_on_enemy_hit"]
[connection signal="hit" from="enemy2" to="." method="_on_enemy_hit"]
[connection signal="hit" from="enemy3" to="." method="_on_enemy_hit"]
